# detflow

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
src/detflow/: __init__.py  analyze.py  cli.py  draft.py  lint.py  llm.py  models.py  overlap.py  review.py
tests/: test_analyze.py  test_draft.py  test_lint.py  test_overlap.py  test_review.py
